# qwip-lang

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.py  build.sh  collect-coverage.py  compare-outputs.py  config.py  config.sh  format.py  format.sh  run-examples.py  test.py  test.sh
examples/: 0-quickstart.qw  1-empty-main.qw  2-hello-world.qw  3-variable-declaration.qw  4-print-format.qw  5-fibonacci.qw  6-structures.qw  7-arrays.qw
src/: CommandLineParser.cpp  CommandLineParser.h  Common.h  Compiler.cpp  Compiler.h  Diagnostics.h  Lexer.cpp  Lexer.h  Nodes.def  Parser.cpp  Parser.h  Tokens.def  Types.def  qwip-unittests.cpp  qwip.cpp
tests/: calling-non-function-type.qw  default-return.qw  definition-in-struct.qw  dump-tokens-error.qw  empty-array-size.qw  expected-var-args.qw  invalid-argument-type.qw  invalid-array-size.qw  invalid-comment-start.qw  invalid-enum-member.qw  invalid-enum-name.qw  invalid-expression.qw  invalid-extern-token.qw  invalid-function-arguments-separator.qw  invalid-parameter.qw  invalid-statement.qw  invalid-type-member-name.qw  invalid-variable-declaration.qw  lex-comments.qw  lex-unfinished-character-literal.qw  lex-unfinished-string.qw  lexing-invalid-character.qw  member-access-of-non-struct-type.qw  missing-argument-separator.qw  missing-ending-array-bracket.qw  missing-ending-array-type-bracket.qw  missing-ending-subscript-bracket.qw  missing-enum-end-brace.qw  missing-enum-starting-brace.qw  missing-function-arrow.qw  missing-member-from-access.qw  missing-output-file.qw  missing-semicol-after-definition.qw  missing-semicol-after-expression.qw  missing-semicol-after-id.qw  missing-semicol-after-return.qw  missing-type.qw  missing-typedef-colon.qw  missing-typedef-name.qw  missing-typedef-opening-brace.qw  (+10 more)
